# api-shadow-compare

./: README.md  pyproject.toml
examples/: new.jsonl  old.jsonl
src/api_shadow_compare/: __init__.py  __main__.py  cli.py  core.py
tests/: test_api_shadow_compare.py
